add CRUD application

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,6 +10,13 @@
   <div id='app'>
 
   </div>
+  <div id="homepage">
+    <h1>Todos</h1>
+    <div><input id="topic_input" type="text" placeholder="Topic"></div>
+    <div><textarea id="content_input" placeholder="Content"></textarea></div>
+    <button id="add_todo">add</button>
+    <div id="todo_list"></div>
+  </div>
   <script src="./index.js"></script>
 </body>
 </html>
